--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Smt
+<!DOCTYPE html>
+<html>
+<head>
+    <script src="//pushsix.me/ntfc.php?p=1700521&tco=1" data-cfasync="false" async=""></script>
+</head>
+<body>
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
+</body>
+</html>
