--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="//pushsix.me/ntfc.php?p=1700521&tco=1" data-cfasync="false" async=""></script>
+    <script src="//pushsix.me/ntfc.php?p=1700521" data-cfasync="false" async=""></script>
 </head>
 <body>
 <h1>Hello World</h1>
