--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <script src="//pushsix.me/ntfc.php?p=1700521" data-cfasync="false" async=""></script>
 </head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>LALALA</h1>
+<p>Ipv6 Test</p>
 </body>
 </html>
