--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="//pushsix.me/ntfc.php?p=1700521" data-cfasync="false" async=""></script>
 </head>
 <body>
-<h1>LALALA</h1>
-<p>Ipv6 Test</p>
+    {"1900065":{"multi_message":true}}
 </body>
 </html>
