--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-    <script src="//pushsix.me/ntfc.php?p=1700521" data-cfasync="false" async=""></script>
+    <title>Push zone 1627240</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <script>
+        const s = document.createElement('script')
+
+        // Zone ID and request_var are defined here
+        s.src = '//pushance.com/pfe/current/tag.min.js?z=3086195&var=var_sample_value&ymid=ymid_sample_value';
+        s.onload = (sdk) => {
+            sdk.updateOptions({
+                disableSwSanity: true,
+                notificationsDelayHttp: 0,
+                notificationsDelayHttps: 0,
+            });
+        };
+        document.head.appendChild(s)
+    </script>
 </head>
-<body>
-<h1>LALALA</h1>
-<p>Ipv6 Test</p>
+<body bgcolor="#BABABA">
+<h1>Zone 3086195</h1>
 </body>
 </html>
