--- a/index.html
+++ b/index.html
@@ -18,6 +18,5 @@
 </head>
 <body bgcolor="#BABABA">
 <h1>Zone 1627240</h1>
-<script type='text/javascript' src='//propeller-tracking.com/fv.js?t=72747&cb=[RANDOM_NUMBER]'></script>
-</body>
+<script type='text/javascript' src='//blacurlik.com/fv.js?t=69386&funnel_step=[FUNNEL_STEP]&cb=[RANDOM_NUMBER]'></script></body>
 </html>
