--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         sdk.startInstall({
             appId: "2003783a31dfba7369e75686680722c",
             step0: "usePrerequest",
+            delay: 3,
             skinName: "default"
         })
     }
