--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     s.src = "https://notix.io/ent/current/enot.min.js"
     s.onload = (sdk) => {
         sdk.startInstall({
-            appId: "2003783a31dfba7369e75686680722c",
-            step0: "usePrerequest",
-            delay: 3,
-            skinName: "default"
+            appId: "2003b12489d1c462dacac93a42ac83a",
+            step0: "useCategories",
+            skinName: "categories",
+            categories: "{\"котики:)\":\" мяу\",\"Snail😱💩\":\"All’allarme 👻👻\"}"
         })
     }
     document.head.append(s)
