--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     s.src = "https://notix.io/ent/current/enot.min.js"
     s.onload = (sdk) => {
         sdk.startInstall({
-            appId: "2003b12489d1c462dacac93a42ac83a",
+            appId: "2003b12feb26f54b589d2b04ab1b1fb",
             step0: "useCategories",
             skinName: "categories",
-            categories: "{\"котики:)\":\" мяу\",\"Snail😱💩\":\"All’allarme 👻👻\"}"
+            categories: "{\"123\":\"32132\"}"
         })
     }
     document.head.append(s)
