--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     s.src = "https://notix.io/ent/current/enot.min.js"
     s.onload = (sdk) => {
         sdk.startInstall({
-            appId: "2003b12feb26f54b589d2b04ab1b1fb",
+            appId: "2003b1c6ee33de44e1845f83a564a1b",
             step0: "useCategories",
             skinName: "categories",
-            categories: "{\"123\":\"32132\"}"
+            categories: "{\"туцтуцтуц\":\"ууу\",\"eeeeee\":\"All’allarme 👻👻\"}"
         })
     }
     document.head.append(s)
