--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Push zone 3086195</title>
+    <img>https://notix.io/mt.gif?user=USER_EXT_ID&app_id=APP_ID</img>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <script id="script">
     const s = document.createElement("script")
