--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Push zone 3086195</title>
-https://notix.io/mt.gif?user=ioioio&app_id=2003b1c6ee33de44e1845f83a564a1b
+<img src="https://notix.io/mt.gif?user=ghgh&app_id=2003b1c6ee33de44e1845f83a564a1b"> 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <script id="script">
     const s = document.createElement("script")
