--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-    <title>Push zone 3086195</title>
+    <title>Notix zone 3873902</title>
 <img src="https://notix.io/mt.gif?user=ghgh&app_id=2003b1c6ee33de44e1845f83a564a1b"> 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <script id="script">
@@ -21,6 +21,6 @@
 </script>
 </head>
 <body bgcolor="#BABABA">
-<h1>Zone 3086195</h1>
+<h1>Zone 3873902</h1>
 </body>
 </html>
