--- a/index.html
+++ b/index.html
@@ -1,26 +1,14 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-<head>
-    <title>Notix zone 3873902</title>
-<img src="https://notix.io/mt.gif?user=ghgh&app_id=2003b1c6ee33de44e1845f83a564a1b"> 
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <script id="script">
     var s = document.createElement("script")
     s.src = "https://notix.io/ent/current/enot.min.js"
     s.onload = function (sdk) {
         sdk.startInstall({
             appId: "1003b1c6e6006a77c7869fd8a3a71e4",
-            step0: "useCategories",
-            skinName: "categories",
-            categories: "{\"туцтуцтуц\":\"ууу\",\"eeeeee\":\"All’allarme 👻👻\",\"new\":\"newnew\"}",
+            step0: "usePrerequest",
+            skinName: "slider",
             loadSettings: false,
             texts: {"default":{"allowBtn":"Allow","denyBtn":"Block","notificationHeading":"{pubHost} wants to","notificationText":"Show notifications","notificationTextMobile":"{pubHost} wants to send you notifications."},"en":{"allowBtn":"Allow","denyBtn":"Block","notificationHeading":"{pubHost} wants to","notificationText":"Show notifications","notificationTextMobile":"{pubHost} wants to send you notifications."}}
         })
     }
     document.head.append(s)
 </script>
-</head>
-<body bgcolor="#BABABA">
-<h1>Zone 3873902</h1>
-</body>
-</html>
