--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+ <html>
+ <head>
+     <title>Notix zone 3873902</title>
+ <img src="https://notix.io/mt.gif?user=ghgh&app_id=2003b1c6ee33de44e1845f83a564a1b"> 
+     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <script id="script">
     var s = document.createElement("script")
     s.src = "https://notix.io/ent/current/enot.min.js"
@@ -12,3 +18,8 @@
     }
     document.head.append(s)
 </script>
+ </head>
+ <body bgcolor="#BABABA">
+ <h1>Zone 3873902</h1>
+ </body>
+ </html>
