--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
     s.onload = function (sdk) {
         sdk.startInstall({
             appId: "1003b1c6e6006a77c7869fd8a3a71e4",
-            step0: "useCategories",
-            skinName: "categories",
-            categories: "{\"туцтуцтуц\":\"ууу\",\"eeeeee\":\"All’allarme 👻👻\",\"new\":\"newnew\"}",
+            step0: "usePrerequest",
+            skinName: "slider",
             loadSettings: false,
             texts: {"default":{"allowBtn":"Allow","denyBtn":"Block","notificationHeading":"{pubHost} wants to","notificationText":"Show notifications","notificationTextMobile":"{pubHost} wants to send you notifications."},"en":{"allowBtn":"Allow","denyBtn":"Block","notificationHeading":"{pubHost} wants to","notificationText":"Show notifications","notificationTextMobile":"{pubHost} wants to send you notifications."}}
         })
