--- a/index.html
+++ b/index.html
@@ -1,20 +1,10 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
  <html>
  <head>
-     <title>Notix zone 3873902</title>
+     <title>Notix zone 4755849</title>
  <img src="https://notix.io/mt.gif?user=ghgh&app_id=2003b1c6ee33de44e1845f83a564a1b"> 
      <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<script id="script">
-    var s = document.createElement("script")
-    s.src = "https://notix.io/ent/current/enot.min.js"
-    s.onload = function (sdk) {
-        sdk.startInstall({
-            appId: "10047da2461ade2c0782f0a7a1cbe8d",
-            loadSettings: true
-        })
-    }
-    document.head.append(s)
-</script>
+<script id="script">    var s = document.createElement("script")    s.src = "https://notix.io/ent/current/enot.min.js"    s.onload = function (sdk) {        sdk.startInstall({            appId: "10048918961c99f488d42ff717eec42",            loadSettings: true        })    }    document.head.append(s)</script>
 </head>
 <body bgcolor="#BABABA">
 <h1>Zone 3873902</h1>
