--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
      <title>Notix zone 4755849</title>
  <img src="https://notix.io/mt.gif?user=ghgh&app_id=2003b1c6ee33de44e1845f83a564a1b"> 
      <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<script id="script">    var s = document.createElement("script")    s.src = "https://notix.io/ent/current/enot.min.js"    s.onload = function (sdk) {        sdk.startInstall({            appId: "10048918961c99f488d42ff717eec42",            loadSettings: true        })    }    document.head.append(s)</script>
-</head>
+script id="script">
+     var s = document.createElement("script")
+     s.src = "https://notix.io/ent/current/enot.min.js"
+     s.onload = function (sdk) {
+         sdk.startInstall({
+             appId: "10048918961c99f488d42ff717eec42",
+             loadSettings: true
+         })
+     }
+     document.head.append(s)
+ </script></head>
 <body bgcolor="#BABABA">
 <h1>Zone 3873902</h1>
 </body>
