--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
      <title>Notix zone 4755849</title>
  <img src="https://notix.io/mt.gif?user=ghgh&app_id=2003b1c6ee33de44e1845f83a564a1b"> 
      <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-script id="script">
+<script id="script">
      var s = document.createElement("script")
      s.src = "https://notix.io/ent/current/enot.min.js"
      s.onload = function (sdk) {
@@ -14,7 +14,8 @@ script id="script">
          })
      }
      document.head.append(s)
- </script></head>
+ </script>
+</head>
 <body bgcolor="#BABABA">
 <h1>Zone 3873902</h1>
 </body>
