--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
  <img src="https://notix.io/mt.gif?user=ghgh&app_id=2003b1c6ee33de44e1845f83a564a1b"> 
      <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <script id="script">
-    var s = document.createElement("script")
-    s.src = "https://notix.io/ent/current/enot.min.js"
-    s.onload = function (sdk) {
-        sdk.startInstall({
-            appId: "100516858630638558dc56ec3f98bbb",
-            loadSettings: true
-        })
-    }
-    document.head.append(s)
+	var s = document.createElement("script")
+	s.src = "https://notix.io/ent/current/enot.min.js"
+	s.onload = function (sdk) {
+		sdk.startInstall(
+			{
+				"appId": "1005a46e06451f3be0cf2071a259b2e",
+				"loadSettings": true
+			}
+		)
+	}
+	document.head.append(s)
 </script>
 </head>
 <body bgcolor="#BABABA">
