--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 	s.onload = function (sdk) {
 		sdk.startInstall(
 			{
-				"appId": "1005b47ea646f2d2e80f349a2a478dc",
-				"loadSettings": true
+				"appId": "1005b47ea646f2d2e80f349a2a478dc"
 			}
 		)
 	}
