--- a/index.html
+++ b/index.html
@@ -21,5 +21,7 @@
 <h1>Zone ???</h1>
  <img src="https://images.unsplash.com/photo-1526512340740-9217d0159da9?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8dmVydGljYWx8ZW58MHx8MHx8&w=1000&q=80">
  </img>
+
+<a href="https://ptashoossagnewe.net/8649277/?var={SOURCE_ID}&ymid={CLICK_ID}">Click here!</a>
 </body>
 </html>
